新增后端变更分类器，支持将代码变更分类为五种类型，并在提交分析中集成分类结果和摘要，优化了风险评估流程。